[package]
name = "maplit2"
version = "1.0.3"
authors = ["willtennien"]

license = "MIT/Apache-2.0"
repository = "https://github.com/willtennien/maplit2"
documentation = "https://docs.rs/maplit2/"

description = "Collection helper libraries and “literal” macros for HashMap, HashSet, BTreeMap, and BTreeSet."

keywords = ["literal", "data-structure", "hashmap", "macro"]
categories = ["rust-patterns"]

[package.metadata.release]
no-dev-version = true
