[package]
name = "lit2"
version = "1.0.8"
authors = ["willtennien"]

license = "MIT/Apache-2.0"
repository = "https://github.com/willtennien/lit2"
documentation = "https://docs.rs/lit2/"

description = "Collection helper libraries and “literal” macros for HashMap, HashSet, BTreeMap, and BTreeSet."

keywords = ["literal", "data-structure", "hashmap", "macro"]
categories = ["rust-patterns"]

[package.metadata.release]
no-dev-version = true
